<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aoibhn.currencyconverter.MainActivity">

    <TextView
        android:id="@+id/end"
        android:layout_width="184dp"
        android:layout_height="20dp"
        android:text="@string/end_curr"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="241dp"
        android:layout_height="383dp"
        android:layout_marginLeft="-8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp" />

    <Spinner
        android:id="@+id/sourceSpinner"
        android:layout_width="123dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/source"
        android:layout_width="184dp"
        android:layout_height="20dp"
        android:text="@string/source_curr"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/endSpinner"
        android:layout_width="124dp"
        android:layout_height="22dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="95dp"
        android:layout_height="61dp"
        android:text="@string/convert"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="286dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="184dp"
        android:layout_height="19dp"
        android:text="@string/date"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="82dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="93dp"
        android:layout_height="65dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="96dp"
        android:layout_height="57dp"
        android:text="@string/amount"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="125dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="248dp" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:text="@string/resultText"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="98dp" />

    <EditText
        android:id="@+id/numbers"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="194dp" />

</android.support.constraint.ConstraintLayout>
